<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blood_oxygen_index_title"
        android:padding="16dp"
        android:textColor="@color/main_text_color"
        />
    <com.example.xingliansdk.widget.IndexItemLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentText_index="@string/blood_oxygen_90"
        app:tvTypeText_index="正常"
        app:contentTextSize_index="18px"
        app:TextSize_index="14px"
        app:styleImage_index="@drawable/round_green"
        app:tvTypeColor_index="@color/color_main_green"
        />

    <com.example.xingliansdk.widget.IndexItemLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentText_index="@string/blood_oxygen_70_90"
        app:tvTypeText_index="缺氧"
        app:contentTextSize_index="18px"
        app:TextSize_index="14px"
        app:tvTypeColor_index="@color/color_blood_pressure_one"
        app:styleImage_index="@drawable/round_bloodpressure_one_level"
        />

    <com.example.xingliansdk.widget.IndexItemLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentText_index="@string/blood_oxygen_70"
        app:tvTypeText_index="严重缺氧"
        app:contentTextSize_index="18px"
        app:TextSize_index="14px"
        app:styleImage_index="@drawable/round_bloodpressure_three_level"
        app:tvTypeColor_index="@color/color_heart"
        />

</LinearLayout>