<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center|left"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/round_bloodpressure_low" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/temp_low"
            android:textColor="@color/sub_text_color" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="偏低"
            android:textColor="@color/color_blood_pressure_low" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_view"
        android:layout_marginLeft="50dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center|left"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/round_green" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/temp_normal"
            android:textColor="@color/sub_text_color" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="正常"
            android:textSize="14sp"
            android:textColor="@color/color_main_green" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_view"
        android:layout_marginLeft="50dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center|left"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/round_bloodpressure_one_level" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/temp_low_fever"
            android:textColor="@color/sub_text_color" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="低热"
            android:textColor="@color/color_blood_pressure_one" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_view"
        android:layout_marginLeft="50dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center|left"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/round_bloodpressure_two_level" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/temp_moderate_fever"
            android:textColor="@color/sub_text_color" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="中热度"
            android:textColor="@color/color_blood_pressure_two" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_view"
        android:layout_marginLeft="50dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center|left"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/round_bloodpressure_three_level" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/temp_high_fever"
            android:textColor="@color/sub_text_color" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="高热"
            android:textColor="@color/color_blood_pressure_three" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_view"
        android:layout_marginLeft="50dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center|left"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/round_four_level" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/temp_ultrahigh_fever"
            android:textColor="@color/sub_text_color" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="超高热"
            android:textColor="@color/color_four" />
    </LinearLayout>

</LinearLayout>