<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            tools:text="0" />

        <TextView
            android:id="@+id/tvDistanceUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@mipmap/icon_checked"
            android:gravity="center"
            android:text="@string/course"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_12" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTargetStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/text_hint_color"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            tools:text="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@mipmap/icon_checked"
            android:gravity="center"
            android:text="@string/target_step"
            android:textColor="@color/text_hint_color"
            android:textSize="@dimen/text_size_12" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/text_hint_color"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            tools:text="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@mipmap/icon_checked"
            android:gravity="center"
            android:text="@string/big_calories"
            android:textColor="@color/text_hint_color"
            android:textSize="@dimen/text_size_12" />
    </LinearLayout>
</LinearLayout>