<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="血压范围参考"
        android:padding="16dp"
        android:textColor="@color/main_text_color"
        />
        <ImageView
            android:id="@+id/imgReplicate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp"
            android:src="@mipmap/right_back"
            android:rotation="90"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llBloodPressureIndex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="正常血压"
        android:textColor="@color/color_blood_pressure_low"
        android:textSize="14sp"
        android:padding="16dp"
        />
    <com.example.xingliansdk.widget.IndexItemLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentText_index="@string/systolic_pressure_130"
        app:contentTextSize_index="18px"
        app:TextSize_index="14px"
        app:styleImage_index="@drawable/round_bloodpressure_low"
        app:tvTypeColor_index="@color/color_blood_pressure_low"
        />
        <com.example.xingliansdk.widget.IndexItemLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentText_index="@string/diastolic_pressure_85"
            app:contentTextSize_index="18px"
            app:TextSize_index="14px"
            app:styleImage_index="@drawable/round_bloodpressure_low"
            app:tvTypeColor_index="@color/color_blood_pressure_low"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="正常高值血压"
            android:textColor="@color/color_blood_pressure_normal"
            android:textSize="14sp"
            android:padding="16dp"
            />
    <com.example.xingliansdk.widget.IndexItemLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentText_index="@string/systolic_pressure_130_139"
        app:contentTextSize_index="18px"
        app:TextSize_index="14px"
        app:styleImage_index="@drawable/round_bloodpressure_normal"
        app:tvTypeColor_index="@color/color_blood_pressure_normal"
        />
        <com.example.xingliansdk.widget.IndexItemLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentText_index="舒张压85～89mmHg"
            app:contentTextSize_index="18px"
            app:TextSize_index="14px"
            app:styleImage_index="@drawable/round_bloodpressure_normal"
            app:tvTypeColor_index="@color/color_blood_pressure_normal"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="一级高血压"
            android:textColor="@color/color_blood_pressure_two"
            android:textSize="14sp"
            android:padding="16dp"
            />
        <com.example.xingliansdk.widget.IndexItemLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentText_index="收缩压140～159mmHg"
            app:contentTextSize_index="18px"
            app:TextSize_index="14px"
            app:tvTypeColor_index="@color/color_blood_pressure_two"
            app:styleImage_index="@drawable/round_bloodpressure_two_level"
            />
    <com.example.xingliansdk.widget.IndexItemLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentText_index="舒张压90～99mmHg"
        app:contentTextSize_index="18px"
        app:TextSize_index="14px"
        app:tvTypeColor_index="@color/color_blood_pressure_two"
        app:styleImage_index="@drawable/round_bloodpressure_two_level"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="二级高血压"
            android:textColor="@color/color_heart"
            android:textSize="14sp"
            android:padding="16dp"
            />
    <com.example.xingliansdk.widget.IndexItemLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentText_index="收缩压≥160mmHg"
        app:contentTextSize_index="18px"
        app:TextSize_index="14px"
        app:styleImage_index="@drawable/round_bloodpressure_three_level"
        app:tvTypeColor_index="@color/color_heart"
        />
        <com.example.xingliansdk.widget.IndexItemLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentText_index="舒张压≥100mmHg"
            app:contentTextSize_index="18px"
            app:TextSize_index="14px"
            app:styleImage_index="@drawable/round_bloodpressure_three_level"
            app:tvTypeColor_index="@color/color_heart"
            />
    </LinearLayout>
</LinearLayout>